<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".Registration">


    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="regButton"
        android:text="@string/registration_button"
        app:layout_constraintEnd_toEndOf="@+id/passwordReg"
        app:layout_constraintStart_toStartOf="@+id/passwordReg"
        app:layout_constraintTop_toBottomOf="@+id/passwordReg" />

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/buttonsColor"
        android:textColorHint="@color/buttonsColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:textColor="@color/buttonsColor"
        android:textColorHint="@color/buttonsColor"
        app:layout_constraintEnd_toEndOf="@+id/emailReg"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/emailReg"
        app:layout_constraintTop_toBottomOf="@+id/emailReg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="112dp"
        android:layout_height="89dp"
        app:layout_constraintBottom_toBottomOf="@+id/registerSign"
        app:layout_constraintStart_toEndOf="@+id/registerSign"
        app:layout_constraintTop_toTopOf="@+id/registerSign"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/registerSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab"
        android:text="@string/reg_sign"
        android:textColor="@color/buttonsColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/emailReg"
        app:layout_constraintEnd_toEndOf="@+id/emailReg"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/emailReg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="closeActivity"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />
</androidx.constraintlayout.widget.ConstraintLayout>